[package]
name = "jolt-core"
version = "0.1.0"
authors = [
  # author of original Spartan paper and code base
  "Srinath Setty <srinath@microsoft.com>",
  # authors who contributed to the Arkworks Spartan fork
  "Zhenfei Zhang <zhenfei.zhang@hotmail.com>",
  # authors who contributed to Lasso/Jolt
  "Michael Zhu <mzhu@a16z.com>",
  "Sam Ragsdale <sragsdale@a16z.com>",
  "Noah Citron <ncitron@a16z.com>",
  "Arasu Arun <arasu.arun5@gmail.com>",
  "Quang Dao <dvquang85@gmail.com>",
  "Andrew Tretyakov <atretyakov@a16z.com>",
  "Markos Georghiades <mgeorghiades@a16z.com>",
]
edition = "2021"
description = "The lookup singularity. Based on Spartan; built on Arkworks."
documentation = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
license-file = "LICENSE"
keywords = ["SNARK", "cryptography", "proofs", "zkVM"]

[features]
default = ["host"]
zk = ["dory/zk"]
host = ["prover", "dep:jolt-inlines-sha2", "dep:jolt-inlines-keccak256"]
prover = [
  "minimal",
  "ark-ec/parallel",
  "ark-ff/parallel",
  "ark-std/parallel",
  "dory/backends",
  "dory/cache",            # This includes `parallel` feature
  "dory/disk-persistence",
]
# This is for building jolt-core without prover capabilities, e.g. for recursion
# jolt-core needs std and rayon to compile, so these are the minimal set of features.
minimal = ["ark-ec/std", "ark-ff/std", "ark-std/std", "ark-ff/asm", "rayon"]
allocative = ["dep:inferno"]
monitor = ["dep:sysinfo"]
pprof = ["dep:pprof", "dep:prost"]
test_incremental = []
challenge-254-bit = []
# D5b (#1586 reviewer): `transcript-poseidon` forces `challenge-254-bit`, so
# under Poseidon `F::Challenge` is the full-field `Mont254BitChallenge`. Poseidon
# deliberately has NO 128-bit optimized challenge (`challenge_128` is
# `unimplemented!` for the Poseidon sponge): for recursion the 128-bit truncation
# is costly and defeats the purpose of using Poseidon in the first place, so the
# Poseidon configuration keeps genuine full-field challenges.
transcript-poseidon = [
  "jolt-transcript/transcript-poseidon",
  "challenge-254-bit",
]
transcript-keccak = ["jolt-transcript/transcript-keccak"]
transcript-blake2b = ["jolt-transcript/transcript-blake2b"]
# Gates `zkvm::transpilable_verifier` (the symbolic on-chain-verifier generator
# consumed by the `transpiler` crate). It is built on the now-removed hand-rolled
# `crate::transcripts::Transcript` trait — which the `transpiler` implements
# symbolically (`impl Transcript for PoseidonAstTranscript`) — and cannot be
# expressed against spongefish's concrete `VerifierState`. Off by default during
# the transcript→spongefish migration; the gnark/Solidity regeneration that
# revives it is a coordinated follow-up (spec Non-Goal #2). See DEV-21.
transpiler = []

[dependencies]
ark-bn254.workspace = true
jolt-optimizations.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
clap.workspace = true
fixedbitset.workspace = true
itertools.workspace = true
num-derive.workspace = true
num.workspace = true
num-traits.workspace = true
postcard = { workspace = true, features = ["use-std"] }
rand = { workspace = true, features = ["std", "std_rng"] }
rand_chacha.workspace = true
rand_core.workspace = true
rayon = { workspace = true, optional = true }
serde = { workspace = true, default-features = false }
sha3.workspace = true
blake2.workspace = true
chrono.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
common.workspace = true
tracer = { workspace = true, default-features = false, features = ["std"] }
bincode.workspace = true
derive_more.workspace = true
dory.workspace = true
allocative.workspace = true
inferno = { workspace = true, optional = true }
jolt-program = { workspace = true, features = ["image", "serialization"] }
jolt-riscv = { workspace = true, features = ["serialization"] }
jolt-transcript.workspace = true
jolt-inlines-sha2 = { workspace = true, features = ["host"], optional = true }
jolt-inlines-keccak256 = { workspace = true, features = [
  "host",
], optional = true }
sysinfo = { workspace = true, optional = true }
pprof = { version = "0.15", features = [
  "prost-codec",
  "flamegraph",
  "frame-pointer",
], optional = true }
prost = { version = "0.14", optional = true }

[package.metadata.cargo-machete]
ignored = ["prost"]

[dev-dependencies]
criterion.workspace = true
iai-callgrind.workspace = true
serial_test.workspace = true
tracer = { workspace = true, default-features = false, features = [
  "std",
  "test-utils",
] }

[build-dependencies]
common.workspace = true

[[bench]]
name = "iai"
harness = false

[[bench]]
name = "commit"
harness = false

[[bench]]
name = "binding"
harness = false

[[bench]]
name = "mles_product_sum"
harness = false

[[bench]]
name = "poly_bench"
harness = false

[[bench]]
name = "polynomial_evaluation"
harness = false

[[bench]]
name = "challenge_mult_performance"
harness = false

[lib]
name = "jolt_core"
path = "src/lib.rs"

[[bin]]
name = "jolt-core"
path = "src/bin/jolt_core.rs"
required-features = ["host"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memory-stats.workspace = true
