[package]
name = "jolt-field"
description = "Fields used in Jolt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
allocative = ["dep:allocative"]

[dependencies]
allocative = { workspace = true, optional = true }
ark-bn254.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
lazy_static.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_core.workspace = true
rayon.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
