[package]
name = "jolt-poly"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-field = { path = "../jolt-field" }
jolt-fiat-shamir = { path = "../jolt-fiat-shamir" }
rayon = { version = "^1.8.0" }
ark-serialize = { version = "0.4.2", default-features = false, features = [
    "derive",
] }
tracing = "0.1.37"
ark-ff = { version = "0.4.2", default-features = false }
ark-bn254 = "0.4.0"
ark-std = { version = "0.4.0" }
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
itertools = "0.10.0"
num-integer = "0.1.45"
strum = "0.26.3"
strum_macros = "0.26.4"
