[package]
name = "jolt-sdk"
version = "0.1.0"
authors = [
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Noah Citron <ncitron@a16z.com>",
    "Andrew Tretyakov <atretyakov@a16z.com>",
    "Markos Georghiades <mgeorghiades@a16z.com>",
]
description = "SDK for Jolt"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
edition = "2021"

[features]
default = ["jolt-platform/random"]
cycle-tracking = ["jolt-platform/cycle-tracking"]
host = [
    "jolt-core/default",
    "jolt-platform/std",
    "dep:tracer",
    "dep:common",
    "dep:ark-ec",
    "dep:ark-bn254",
    "dep:ark-serialize",
    "postcard/use-std",
    "serde/std",
]
guest-std = [
    "postcard/use-std",
    "jolt-platform/std",
    "jolt-sdk-macros/guest-std",
    "serde/std",
]
guest-verifier = [
    "guest-std",
    "dep:tracer",
    "dep:common",
    "dep:ark-bn254",
    "jolt-core/minimal",
]
malloc-shim = ["jolt-platform/malloc-shim"]

[dependencies]
jolt-platform.workspace = true
postcard.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"] }
ark-ec = { workspace = true, default-features = false, optional = true }
ark-bn254 = { workspace = true, default-features = false, optional = true }
ark-serialize = { workspace = true, default-features = false, optional = true }

jolt-sdk-macros.workspace = true
# Host-only dependencies
common = { workspace = true, optional = true }
jolt-core = { workspace = true, default-features = false, optional = true }
tracer = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
hex-literal.workspace = true
