[package]
name = "jolt-sdk"
version = "0.1.0"
authors = [
  "Michael Zhu <mzhu@a16z.com>",
  "Sam Ragsdale <sragsdale@a16z.com>",
  "Noah Citron <ncitron@a16z.com>",
  "Andrew Tretyakov <atretyakov@a16z.com>",
  "Markos Georghiades <mgeorghiades@a16z.com>",
]
description = "SDK for Jolt"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
edition = "2021"

[features]
default = ["jolt-platform/random"]
debug = ["zeroos?/debug"]
zk = ["jolt-prover-legacy?/zk", "jolt-verifier?/zk"]
field-inline = [
  "jolt-prover-legacy?/field-inline",
  "jolt-program?/field-inline",
  "tracer?/field-inline",
]

host = [
  "jolt-prover-legacy/default",
  "dep:bincode",
  "jolt-platform/std",
  "dep:jolt-common",
  "dep:jolt-crypto",
  "dep:jolt-dory",
  "dep:jolt-field",
  "dep:jolt-program",
  "dep:jolt-transcript",
  "dep:jolt-verifier",
  "dep:tracer",
  "postcard/use-std",
  "serde/std",
]

guest-nostd = ["zeroos-nostd"]

# ZeroOS features
guest-std = [
  "postcard/use-std",
  "jolt-platform/std",
  "jolt-sdk-macros/guest-std",
  "serde/std",
  "zeroos-std",
]

guest-verifier = [
  "guest-std",
  "dep:bincode",
  "dep:jolt-common",
  "dep:jolt-crypto",
  "dep:jolt-dory",
  "dep:jolt-field",
  "dep:jolt-transcript",
  "dep:jolt-verifier",
  "jolt-prover-legacy/minimal",
]

malloc-shim = ["jolt-platform/malloc-shim"]
transcript-poseidon = ["jolt-prover-legacy/transcript-poseidon"]
transcript-keccak = ["jolt-prover-legacy/transcript-keccak"]
transcript-blake2b = ["jolt-prover-legacy/transcript-blake2b"]

# Jolt-SDK native features (optional capabilities)
#
# `zeroos-*` features are the canonical internal switches for ZeroOS-backed functionality in
# `jolt-sdk` (and are referenced by `jolt-sdk` boot/wiring code via `cfg(feature = "zeroos-…")`).
#
# The short names below are user-facing aliases for convenience. They intentionally delegate to
# `zeroos-*` so enabling a capability also enables the corresponding `jolt-sdk` wiring, not just
# the dependency’s `zeroos?/…` features.
thread = ["zeroos-thread"]
random = ["zeroos-random"]
stdout = ["zeroos-vfs-device-console"]

zeroos-runtime-nostd = ["zeroos?/runtime-nostd"]
zeroos-runtime-musl = []
zeroos-thread = ["zeroos?/scheduler-cooperative"]
zeroos-vfs = ["zeroos?/vfs"]
zeroos-random = ["zeroos?/random", "zeroos?/rng-lcg"]
zeroos-vfs-device-console = ["zeroos-vfs", "zeroos?/vfs-device-console"]

zeroos-nostd = ["dep:zeroos", "zeroos-runtime-nostd"]

zeroos-std = ["dep:zeroos", "zeroos-runtime-musl"]

[dependencies]

# Jolt's jolt-platform for host/prover functionality
jolt-platform.workspace = true
postcard.workspace = true
bytemuck.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"] }

jolt-sdk-macros.workspace = true
# Host-only dependencies
bincode = { workspace = true, optional = true }
jolt-common = { workspace = true, optional = true }
jolt-prover-legacy = { workspace = true, default-features = false, optional = true }
jolt-crypto = { workspace = true, optional = true }
jolt-dory = { workspace = true, optional = true }
jolt-field = { workspace = true, optional = true }
jolt-program = { workspace = true, optional = true }
jolt-transcript = { workspace = true, optional = true }
jolt-verifier = { workspace = true, optional = true }
tracer = { workspace = true, default-features = false, features = [
  "std",
], optional = true }
zeroos = { workspace = true, optional = true }
cfg-if = { workspace = true }

[target.'cfg(all(target_arch = "riscv64"))'.dependencies]
riscv = { workspace = true }
zeroos = { workspace = true, default-features = false, features = [
  "arch-riscv",
  "alloc-linked-list",
] }

[target.'cfg(all(target_arch = "riscv64", target_os = "none"))'.dependencies]
zeroos = { workspace = true, default-features = false, features = [
  "runtime-nostd",
  "panic",
] }

[target.'cfg(all(target_arch = "riscv64", target_os = "linux"))'.dependencies]
zeroos = { workspace = true, default-features = false, features = [
  "os-linux",
  "runtime-musl",
] }
