[package]
name = "jolt-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
jolt-core = { path = "../jolt-core", default-features = false, features = ["host-verifier"] }
common = { path = "../common" }

[dev-dependencies]
ark-serialize = "0.5.0"

[features]
default = ["parallel"]
parallel = ["jolt-core/parallel"]
no-parallel = []

