[package]
name = "dory"
version = "1.0.0"
edition = "2021"
authors = [
    "Markos Georghiades <mgeorghiades@a16z.com>",
    "Jay White <jay@spaceandtime.io>",
]
license = "Apache-2.0"
description = "A generic implementation of the Dory polynomial commitment scheme."
repository = "https://github.com/spaceandtimelabs/sxt-dory"
exclude = [".github", "README.md"]

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = { version = "0.5.0", default-features = false, features = [
    "parallel",
] }
ark-ff = { version = "0.5.0", default-features = false, features = [
    "parallel",
] }

ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions"  }

ark-std = "0.5.0"
bincode = "1.3.3"
blake2 = "0.10.6"
rand_chacha = { version = "0.3.0", default-features = false }
digest = "0.10.7"
rayon = "1.10.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
jolt-optimizations = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }

[patch.crates-io]
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions"  }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "feat/fewer-reductions"  }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
doc_markdown = "allow"
missing_docs_in_private_items = "warn"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
