[package]
name = "tracer"
version = "0.2.0"
authors = [
    # author of the original riscv-rust codebase
    "Takahiro <hogehoge@gachapin.jp>",
    # authors of the modifications for Jolt
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Noah Citron <ncitron@a16z.com>",
]
description = "RISC-V emulator for Jolt"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
edition = "2021"

[features]
default = ["std"]
std = ["common/std", "fnv/std", "object/std", "tracing/std"]

[dependencies]
fnv = { version = "1.0.7", default-features = false }
object = { version = "0.36.7", default-features = false, features = ["build_core", "elf"] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
derive_more = { version = "2.0.1", default-features = false, features = ["from"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }
strum_macros = { version = "0.26.4", default-features = false }
strum = { version = "0.26.3", default-features = false }
rand = { version = "0.7.3", default-features = false }
paste = { version = "1.0.15", default-features = false }

common = { path = "../common", default-features = false }
