[package]
name = "tracer"
version = "0.2.0"
authors = [
    # author of the original riscv-rust codebase
    "Takahiro <hogehoge@gachapin.jp>",
    # authors of the modifications for Jolt
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Noah Citron <ncitron@a16z.com>",
]
description = "RISC-V emulator for Jolt"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
edition = "2021"

[[bin]]
name = "jolt-emu"
path = "src/main.rs"

[lib]
name = "tracer"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "common/std",
    "fnv/std",
    "object/std",
    "tracing/std",
]

[dependencies]
fnv = { version = "1.0.7", default-features = false }
object = { version = "0.36.7", features = ["build_core", "elf"], default-features = false }
tracing = { version = "0.1.41", features = ["attributes"], default-features = false }
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
common = { path = "../common", default-features = false }
