[package]
name = "tracer"
version = "0.2.0"
authors = [
    # author of the original riscv-rust codebase
    "Takahiro <hogehoge@gachapin.jp>",
    # authors of the modifications for Jolt
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Noah Citron <ncitron@a16z.com>",
]
description = "RISC-V emulator for Jolt"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
edition = "2021"

[[bin]]
name = "jolt-emu"
path = "src/main.rs"

[features]
default = ["std"]
std = ["common/std", "fnv/std", "object/std", "tracing/std", "postcard/use-std"]

[dependencies]
fnv = { version = "1.0.7", default-features = false }
object = { version = "0.36.7", features = [
    "build_core",
    "elf",
], default-features = false }
tracing = { version = "0.1.41", features = [
    "attributes",
], default-features = false }
ark-serialize = { version = "0.5.0", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum_macros = "0.26.4"
strum = "0.26.3"
rand = "0.7.3"
paste = "1.0.15"
itertools = "0.10.0"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
common = { path = "../common", default-features = false }
postcard = { version = "1.0.8", default-features = false }
lazy_static = "1.4"

