[package]
name = "zklean-extractor"
version = "0.1.0"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
description = "Extracts an IR suitable for the ZKLean library for Jolt instructions"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
edition = "2021"

[build-dependencies]
build-fs-tree = "0.8.1"

[dependencies]
ark-std.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
clap.workspace = true
rand_core = { version = "0.6.4", default-features = false }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum.workspace = true
build-fs-tree = "0.8.1"
allocative.workspace = true
num-bigint = "0.4"

jolt-prover-legacy = { path = "../crates/jolt-prover-legacy" }
jolt-common = { workspace = true, features = ["std"] }
jolt-tracer = { workspace = true, features = ["std"] }

[dev-dependencies]
proptest = "1.11.0"
