[package]
name = "zkml-jolt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
onnx-tracer = { path = "../onnx-tracer" }
jolt-core = { path = "../jolt-core" }
itertools = "0.10.0"
rayon = { version = "^1.8.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.41", features = [
  "attributes",
], default-features = false }
