[package]
name = "zkml-jolt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
itertools = "0.10.0"
jolt-core = { path = "../jolt-core" }
onnx-tracer = { path = "../onnx-tracer" }
rayon = { version = "^1.8.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.41", features = [
  "attributes",
], default-features = false }
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.7.3"
thiserror = "1.0.58"
sha3 = "0.10.8"
ark-serialize = { version = "0.5.0", default-features = false, features = [
  "derive",
] }
ark-serialize-derive = { version = "0.5.0", default-features = false }
