[package]
name = "zkml-jolt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
itertools = "0.10.0"
jolt-core = { path = "../jolt-core" }
onnx-tracer = { path = "../onnx-tracer" }
rayon = { version = "^1.8.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.41", features = [
  "attributes",
], default-features = false }
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.7.3"

[dev-dependencies]
log = "0.4"
regex = "1.10.6"
