[package]
name = "tracer"
version = "0.2.0"
authors = [
    # author of the original riscv-rust codebase
    "Takahiro <hogehoge@gachapin.jp>",
    # authors of the modifications for Jolt
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Noah Citron <ncitron@a16z.com>",
    "Andrew Tretyakov <atretyakov@a16z.com>",
    "Markos Georghiades <mgeorghiades@a16z.com>",
]
description = "RISC-V emulator for Jolt"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
edition = "2021"

[[bin]]
name = "jolt-emu"
path = "src/main.rs"

[features]
default = ["std"]
std = [
    "jolt-platform/std",
    "common/std",
    "fnv/std",
    "object/std",
    "tracing/std",
    "postcard/use-std",
]
test-utils = ["dep:rand"]

[dependencies]
jolt-platform.workspace = true
fnv.workspace = true
object.workspace = true
tracing = { workspace = true, features = [
    "attributes",
], default-features = false }
ark-serialize.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
strum.workspace = true
rand = { workspace = true, optional = true }
paste.workspace = true
itertools.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
common = { workspace = true, default-features = false }
postcard.workspace = true
addr2line.workspace = true

[dev-dependencies]
rand.workspace = true
