[package]
name = "zklean-extractor"
version = "0.1.0"
authors = [
    "Ben Hamlin <hamlinb@galois.com>",
]
description = "Extracts an IR suitable for the ZKLean library for Jolt instructions"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
edition = "2021"

[build-dependencies]
build-fs-tree = "0.7.1"

[dependencies]
ark-std.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
clap.workspace = true
rand_core = { version = "0.6.4", default-features = false }
regex = "1.11.1"
strum.workspace = true
build-fs-tree = "0.7.1"
allocative.workspace = true

jolt-core = { path = "../jolt-core" }
common = { path = "../common" }
tracer = { path = "../tracer" }

[dev-dependencies]
proptest = "1.6.0"
