[package]
name = "transcript"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-crypto-primitives = { git = "https://github.com/a16z/crypto-primitives.git" }
jolt-core = { git = "https://github.com/arithmic/jolt.git", branch = "test_circom_native"}
ark-ff = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0" }
ark-bn254 = "0.5.0"
ark-grumpkin = "0.5.0"
ark-ec = { version = "0.5.0", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
num-bigint = {version = "0.4"}
parsing = { path = "../../parsing" }
# matrix = { path = "../../../R1CS_matrix" }
rand = "0.8" 

[features]
default = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-std/parallel",
    "ark-ff/asm",
    "ark-crypto-primitives/sponge",
]
